nuevos cambios diseño

--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -6,7 +6,7 @@
     background: -webkit-linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
     
    
-    background: linear-gradient(to right, #411679, #324d88);
+    background: linear-gradient(to right, #2c0c55, #324d88);
     
     }
     
