--- a/resources/css/inicio.css
+++ b/resources/css/inicio.css
@@ -27,13 +27,13 @@ header{
 {
     height: 100px;
     width: 100%;
-    background-color:#0F0F0F;     
+    background-color:rgb(70, 24, 172) ;    
 }
 
 /*Navbar que controlo los iconos del carrito*/
 
 .navbar2{
-    background-color:#005B41;
+    background-color:#27005D;
 }
 
 .dropdowm-item{
@@ -41,7 +41,7 @@ header{
 }
 
 .promos{
-    
+    background-color:rgb(70, 24, 172) ;   
     width: 100%;
     padding-top: 20px;
 }
@@ -78,11 +78,20 @@ header{
 }
 
 /*Parte del section*/
+main{
+    display: flex;
+    /*background-color: #005B41;*/
+    width: 85%;
+    height: 100vh;
+    float: right;
+    background-color:rgb(70, 24, 172) ; 
+}
 
 aside{
-    display: flex;
+    background-color:rgb(70, 24, 172) ; 
     padding: 15px;
-    width: 30%;
+    width: 15%;
+    height: 100vh;
     
 }
 
@@ -109,6 +118,10 @@ li a:hover{
 }
 #blue{
     color: #0000ff;
+}
+
+footer{
+   background-color:  #27005D;
 }
 
 
