--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -1,11 +1,5 @@
 .gradient-custom-2 {
-    
-    background: #fccb90;
-    
-   
     background: -webkit-linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
-    
-   
     background: linear-gradient(to right, #2c0c55, #324d88);
     
     }
@@ -26,12 +20,32 @@
 
 /* para el registro*/
 .container {
-    margin-top: 50px;
-    box-shadow: 20px black;
+    background-color: #27005D;
+    width: 100%;
+    box-shadow: 100px black;
+
 }
 
-.form-container {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
+.user{
+    font-size: 10px;
 }
+
+.text-dibujo{
+    font-size: 40px;
+}
+
+.card{
+    background-color:rgb(70, 24, 172);
+    box-shadow: -3px 6px 31px 17px rgba(0,0,0,0.75);
+-webkit-box-shadow: -3px 6px 31px 17px rgba(0,0,0,0.75);
+-moz-box-shadow: -3px 6px 31px 17px rgba(0,0,0,0.75);
+}
+
+
+.text-inicio{
+    font-size:40px;
+    text-align:center;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+
