--- a/resources/css/inicio.css
+++ b/resources/css/inicio.css
@@ -1,3 +1,6 @@
+*{
+font-family: 'Courier New', Courier, monospace
+}
 
 header{
     width: 100%;
@@ -5,20 +8,34 @@ header{
 }
 
 /*Ajusta el tamaño de la barra de busqueda*/
-.barra{
-    width: 500px;
-    height: 30px;
-    border-radius: 10px;
+.search-container {
+    position: relative;
+    display: inline-block;
+    width: 250px;
+    height: 40px;
 }
 
-.lupa i{
-    float: left;
-    background-color: red;
+.search-icon {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 24px;
+    height: 24px;
+    background: url('https://img.icons8.com/material-outlined/24/000000/search.png') no-repeat;
 }
 
-.nav-item {
-    height: 100px;
-    padding: 8px;
+.search-input {
+    width: 100%;
+    height: 100%;
+    padding: 10px 10px 10px 44px;
+    box-sizing: border-box;
+    border: 1px solid #ddd;
+    border-radius: 25px;
+    outline: none;
+}
+
+.search-input:focus {
+    border-color: #6699cc;
 }
 
 
@@ -65,6 +82,11 @@ header{
 .navbar-nav .nav-link:hover {
     color: green !important;
 }
+
+.navbar-nav i:hover{
+    color: green !important;
+}
+
 .separador{
     border-top:  solid #ccc;
     margin-top: 0;
