--- a/resources/css/inicio.css
+++ b/resources/css/inicio.css
@@ -1,149 +1,91 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+
 *{
-font-family: 'Courier New', Courier, monospace
-}
-
-header{
-    width: 100%;
-    display:flex;
-}
-
-/*Ajusta el tamaño de la barra de busqueda*/
-.search-container {
-    position: relative;
-    display: inline-block;
-    width: 250px;
-    height: 40px;
-}
-
-.search-icon {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    width: 24px;
-    height: 24px;
-    background: url('https://img.icons8.com/material-outlined/24/000000/search.png') no-repeat;
-}
-
-.search-input {
-    width: 100%;
-    height: 100%;
-    padding: 10px 10px 10px 44px;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    border: 1px solid #ddd;
-    border-radius: 25px;
-    outline: none;
+    font-family: 'Montserrat', sans-serif;;
 }
 
-.search-input:focus {
-    border-color: #6699cc;
+body{
+    background-color: #161a3a;
 }
 
-
-/* Ajustes para el navbar del header */
-.navbar  
-{
-    height: 100px;
+.header-container{
+    background-color: rebeccapurple;
+    height: 15vh;
     width: 100%;
-    background-color:rgb(70, 24, 172) ;    
-}
-
-/*Navbar que controlo los iconos del carrito*/
-
-.navbar2{
-    background-color:#27005D;
-}
-
-.dropdowm-item{
-    vertical-align: inherit;
-}
-
-.promos{
-    background-color:rgb(70, 24, 172) ;   
-    width: 100%;
-    padding-top: 20px;
-}
-.promos img{
-    width: 100%;
-}
-
-.retenedor{
-    display:flex;
-    width: 100%;
-    justify-content: space-between;
-    
-}
-
-.retenedor img{
-    width: 100%;
-    padding: 5px;
-}
-
-/* hover de color verde en opciones del nav */
-.navbar-nav .nav-link:hover {
-    color: green !important;
-}
-
-.navbar-nav i:hover{
-    color: green !important;
-}
-
-.separador{
-    border-top:  solid #ccc;
-    margin-top: 0;
-    margin-bottom: 1rem;
-}
-
-/* hover de color verde en opciones del nav  carrusel*/ 
-.container {
-    background-color: #797979;
-    border-radius: 10px;
-}
-
-/*Parte del section*/
-main{
     display: flex;
-    /*background-color: #005B41;*/
-    width: 85%;
-    height: 100vh;
-    float: right;
-    background-color:rgb(70, 24, 172) ; 
+    flex-direction: row;
+    justify-content: space-between;
 }
 
-aside{
-    background-color:rgb(70, 24, 172) ; 
-    padding: 15px;
-    width: 15%;
-    height: 100vh;
+.logo-container{
+    width: 25%;
     
+    display: flex;
+  
+}
+    
+.logo-container img{
+    height: 100px;
+    width: 100px;
 }
 
-ul{
-    list-style: none;
-    padding: 5px;
-}
-li a{
-    color: darkgray;
-    text-decoration: none;
-}
-li a:hover{
-    text-decoration: none;
-    color: darksalmon;
-}
-.fa-circle{
-    font-size: 20px;
-}
-#red{
-    color: #e94545d7;
-}
-#teal{
-    color: rgb(69, 129, 129);
-}
-#blue{
-    color: #0000ff;
+.logo-container h1{
+    color: #fff;
+    font-size:30px;
+    letter-spacing: 0.3px;
+    margin-top: 30px;
 }
 
-footer{
-   background-color:  #27005D;
+/*Barra de busqueda*/
+
+.barra-container{
+    background-color: coral;
+    width: 100%;
 }
+
+/*Termina busqueda*/
+
+/*Botones Interaccion*/
+.btn-interaccion{
+    background-color: blue;
+    width: 100%;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-interaccion i{
+    padding: 10px;
+    color: white;
+}
+
+/*Termina interaccion*/
+
+/*Navbar*/
+.menu{
+  background-color: hotpink;
+  color: white;
+  width:100%;
+  height: 10vh;
+  display: flex;
+  align-items: center;
+}
+
+.dropdown{
+    height: 15vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.dropdown-toggle{
+    color: #fff;
+}
+
+
 
 
