--- a/resources/css/inicio.css
+++ b/resources/css/inicio.css
@@ -8,21 +8,18 @@
 }
 
 body{
-    background-color: #161a3a;
+    background-color: #03080d;
 }
 
 .header-container{
-    background-color: rebeccapurple;
     height: 15vh;
     width: 100%;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
 }
 
 .logo-container{
     width: 25%;
-    
     display: flex;
   
 }
@@ -41,20 +38,76 @@ body{
 
 /*Barra de busqueda*/
 
+.contenedor-barra{
+    background-color: red;
+}
+
 .barra-container{
-    background-color: coral;
-    width: 100%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top:8%;
+    padding: 10px;
+}
+
+.buscar{
+    outline: none;
+    box-sizing: border-box;
+    height: 60px;
+    width: 0;
+    padding: 0 20px;
+    color: #000;
+    border-radius: 50px;
+    font-size: 20px;
+    border: 1px solid red;
+    transition: all 0.7s ease;
+}
+
+.barra-container::placeholder{
+    color: grey;
+}
+
+.btn-barra{
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 80px;
+    height: 80px;
+    background: red;
+    line-height: 80px;
+    border-radius: 50%;
+    text-align: center;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.btn-barra i{
+    font-size: 25px;
+    color: #fff;
+    line-height: 80px;
+    transition: all 0.7s ease;
+}
+
+.barra-container ::hover .buscar{
+    width: 100px;
+}
+
+.barra-container::hover i{
+   transform: rotate(-360deg);
+}
+
+.btn-barra::hover{
+    background: red;
 }
 
 /*Termina busqueda*/
 
 /*Botones Interaccion*/
 .btn-interaccion{
-    background-color: blue;
-    width: 100%;
+    width: 25%;
     font-size: 30px;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -67,25 +120,37 @@ body{
 
 /*Navbar*/
 .menu{
-  background-color: hotpink;
+  background-color: #161a3a;
   color: white;
   width:100%;
   height: 10vh;
   display: flex;
-  align-items: center;
+  justify-content: center;
 }
 
-.dropdown{
-    height: 15vh;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
 
 .dropdown-toggle{
     color: #fff;
 }
 
+/*Termina navbar*/
 
+.logo-mamamlon{
+    width: 100%;
+}
+
+.logo-mamamlon img{
+    width: 100%;
+}
+
+.container-tendencia{
+    background:lightblue;
+    width: 100%;
+    height: 100vh;
+    color: #fff;
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-around;
+}
 
 
