--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -8,8 +8,7 @@
 }
 
 body{
-    background-color: #c9d6ff;
-    background: linear-gradient(to right, #e2e2e2, #c9d6ff);
+    background: linear-gradient(to right, #03080d, #512da8);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -18,14 +17,14 @@ body{
 }
 
 .container{
-    background-color: #fff;
+  
     border-radius: 30px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
+    box-shadow: 0 5px 15px black;
     position: relative;
     overflow: hidden;
-    width: 768px;
+    width: 900px;
     max-width: 100%;
-    min-height: 480px;
+    min-height: 780px;
 }
 
 .container p{
@@ -66,17 +65,17 @@ body{
 }
 
 .container form{
-    background-color: #fff;
+    background-color: #161a3a;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     padding: 0 40px;
     height: 100%;
+    color: white;
 }
 
 .container input{
-    background-color: #eee;
     border: none;
     margin: 8px 0;
     padding: 10px 15px;
@@ -131,6 +130,7 @@ body{
 }
 
 .social-icons{
+    color: white;
     margin: 20px 0;
 }
 
@@ -163,9 +163,8 @@ body{
 }
 
 .toggle{
-    background-color: #512da8;
     height: 100%;
-    background: linear-gradient(to right, #5c6bc0, #512da8);
+    background: linear-gradient(to right, #03080d, #512da8);
     color: #fff;
     position: relative;
     left: -100%;
