--- a/resources/css/inicio.css
+++ b/resources/css/inicio.css
@@ -8,7 +8,7 @@
 }
 
 body{
-    background-color: #03080d;
+    background-color: #0d1f30;
 }
 
 .header-container{
@@ -137,20 +137,30 @@ body{
 
 .logo-mamamlon{
     width: 100%;
+    
 }
 
 .logo-mamamlon img{
     width: 100%;
+    height: 500px;
 }
 
-.container-tendencia{
-    background:lightblue;
-    width: 100%;
-    height: 100vh;
+
+#myCarousel {
+    max-width: 600px; 
+    margin: auto;
+  }
+
+  .carousel-inner {
+    max-height: 350px; 
+  }
+
+  .carousel-caption {
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 10px;
+    background: rgba(0, 0, 0, 0.5);
     color: #fff;
-    margin-top: 10px;
-    display: flex;
-    justify-content: space-around;
-}
-
-
+    text-align: right;
+  }
