--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -8,7 +8,7 @@
 }
 
 body{
-    background: linear-gradient(to right, #03080d, #512da8);
+    background: linear-gradient(to right, #512da8, #03080d);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -65,7 +65,7 @@ body{
 }
 
 .container form{
-    background-color: #161a3a;
+    background-color: #323969;
     display: flex;
     align-items: center;
     justify-content: center;
