--- a/resources/css/noticias.css
+++ b/resources/css/noticias.css
@@ -88,11 +88,11 @@ body{
     width:450px;
 }
 
-.barra-container:hover i{
+.barra-container::hover i{
    transform: rotate(-360deg);
 }
 
-.btn-barra:hover{
+.btn-barra::hover{
     background: red;
 }
 
@@ -122,50 +122,34 @@ body{
 
 /*Termina interaccion*/
 
-/*Navbar*/
-.menu{
-  background-color: #161a3a;
-  color: white;
-  width:100%;
-  height: 10vh;
-  display: flex;
-  justify-content: center;
-}
+.noticias-container {
+    width: 80%;
+    margin: 20px auto;
+    padding: 20px;
+    border: 1px solid #000000;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+  }
 
+  .noticia {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #ccc;
+    padding: 10px 0;
+    margin-bottom: 10px;
+    color: white;
+    
+  }
 
-.dropdown-toggle{
-    color: #fff;
-}
+  .noticia img {
+    max-width: 300px;
+    margin-right: 20px;
+  }
 
-/*Termina navbar*/
-
-.aside-container{
-  width: 100%;
-}
-
-.banner-principal img{
-  width: 100%;
-}
-
-.tende{
-  margin-top: 10px;
-  color: white;
-  background-color: red;
-}
-
-.main-container{
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
-
+  .noticia h2 {
+    margin: 0;
+  }
 
 .footer{
     background-color: #161a3a;
     width: 100%;
 }
-
-
-
-
