--- a/resources/css/terminos.css
+++ b/resources/css/terminos.css
@@ -88,11 +88,11 @@ body{
     width:450px;
 }
 
-.barra-container:hover i{
+.barra-container::hover i{
    transform: rotate(-360deg);
 }
 
-.btn-barra:hover{
+.btn-barra::hover{
     background: red;
 }
 
@@ -122,50 +122,20 @@ body{
 
 /*Termina interaccion*/
 
-/*Navbar*/
-.menu{
-  background-color: #161a3a;
-  color: white;
-  width:100%;
-  height: 10vh;
-  display: flex;
-  justify-content: center;
+.terminos-container{
+    width: 80%;
+    margin: 20px auto;
+    padding: 20px;
+    border: 1px solid #000000;
+    box-shadow: 0 0 10px white;
+  
 }
 
-
-.dropdown-toggle{
-    color: #fff;
+.terminos-container h1, h3, p{
+    color: white;
 }
-
-/*Termina navbar*/
-
-.aside-container{
-  width: 100%;
-}
-
-.banner-principal img{
-  width: 100%;
-}
-
-.tende{
-  margin-top: 10px;
-  color: white;
-  background-color: red;
-}
-
-.main-container{
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
-
 
 .footer{
     background-color: #161a3a;
     width: 100%;
 }
-
-
-
-
