Se habia desconfigurado feo

--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -65,7 +65,7 @@ body{
 }
 
 .container form{
-    background-color: #323969;
+    background-color: #03080d;
     display: flex;
     align-items: center;
     justify-content: center;
