--- a/resources/css/inicio.css
+++ b/resources/css/inicio.css
@@ -8,7 +8,7 @@
 }
 
 body{
-    background-color: #0d1f30;
+    background-color: #03080d;
 }
 
 .header-container{
@@ -124,7 +124,7 @@ body{
 
 /*Navbar*/
 .menu{
-  background-color: #161a3a;
+  background-color: #000421;
   color: white;
   width:100%;
   height: 10vh;
@@ -141,6 +141,8 @@ body{
 
 .aside-container{
   width: 100%;
+}
+
 .logo-mamamlon{
     width: 100%;
     
@@ -162,39 +164,13 @@ body{
   justify-content: space-between;
 }
 
-
-
 .footer{
-    background-color: #161a3a;
+    background-color:#1f254a;
     width: 100%;
 }
-
-
-
 
 
 .logo-mamamlon img{
     width: 100%;
     height: 500px;
 }
-
-
-#myCarousel {
-    max-width: 900px; 
-    
-    margin: auto;
-  }
-
-  .carousel-inner {
-    max-height: 1000px; 
-  }
-
-  .carousel-caption {
-    right: 0;
-    bottom: 0;
-    left: 0;
-    padding: 10px;
-    background: rgba(0, 0, 0, 0.8);
-    color: #fff;
-    text-align: right;
-  }}
