--- a/resources/css/noticias.css
+++ b/resources/css/noticias.css
@@ -127,7 +127,7 @@ body{
     margin: 20px auto;
     padding: 20px;
     border: 1px solid #000000;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+    box-shadow: 0 0 10px white;
   }
 
   .noticia {
