--- a/resources/css/inicio.css
+++ b/resources/css/inicio.css
@@ -1,52 +1,51 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap");
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;;
+    font-family: "Montserrat", sans-serif;
 }
 
-body{
+body {
     background-color: #03080d;
 }
 
-.header-container{
+.header-container {
     height: 15vh;
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
 
-.logo-container{
+.logo-container {
     width: 25%;
     display: flex;
-  
 }
-    
-.logo-container img{
+
+.logo-container img {
     height: 100px;
     width: 100px;
 }
 
-.logo-container h1{
+.logo-container h1 {
     color: #fff;
-    font-size:30px;
+    font-size: 30px;
     letter-spacing: 0.3px;
     margin-top: 30px;
 }
 
 /*Barra de busqueda*/
 
-.barra-container{
-    position:absolute;
+.barra-container {
+    position: absolute;
     transform: translate(-50%, -50%);
     left: 50%;
-    top:8%;
+    top: 8%;
     padding: 10px;
 }
 
-.buscar{
+.buscar {
     outline: none;
     box-sizing: border-box;
     height: 60px;
@@ -59,11 +58,11 @@ body{
     transition: all 0.7s ease;
 }
 
-.barra-container::placeholder{
+.barra-container::placeholder {
     color: grey;
 }
 
-.btn-barra{
+.btn-barra {
     position: absolute;
     right: 0;
     top: 0;
@@ -71,35 +70,35 @@ body{
     height: 80px;
     background: red;
     line-height: 80px;
-    border-radius:50%;
+    border-radius: 50%;
     text-align: center;
     cursor: pointer;
-    transition: .5s;
+    transition: 0.5s;
 }
 
-.btn-barra i{
+.btn-barra i {
     font-size: 25px;
     color: #fff;
     line-height: 80px;
     transition: all 0.7s ease;
 }
 
-.barra-container:hover .buscar{
-    width:450px;
+.barra-container:hover .buscar {
+    width: 450px;
 }
 
-.barra-container:hover i{
-   transform: rotate(-360deg);
+.barra-container:hover i {
+    transform: rotate(-360deg);
 }
 
-.btn-barra:hover{
+.btn-barra:hover {
     background: red;
 }
 
 /*Termina busqueda*/
 
 /*Botones Interaccion*/
-.btn-interaccion{
+.btn-interaccion {
     width: 25%;
     font-size: 30px;
     display: flex;
@@ -108,69 +107,78 @@ body{
     margin: 10px;
 }
 
-.btn-interaccion i{
+.btn-interaccion i {
     color: white;
 }
 
-.btn-interaccion:hover .corazon{
-  color: red;
+.corazon:hover{
+    color: red;
 }
 
-.btn-interaccion h3{
-  color: white;
+.btn-interaccion h3 {
+    color: white;
+}
+
+.Meterse:hover{
+    color: red;
+}
+
+.carrito:hover{
+    color: yellow;
 }
 
 /*Termina interaccion*/
 
 /*Navbar*/
-.menu{
-  background-color: #000421;
-  color: white;
-  width:100%;
-  height: 10vh;
-  display: flex;
-  justify-content: center;
+.menu {
+    background-color: #000421;
+    color: white;
+    width: 100%;
+    height: 10vh;
+    display: flex;
+    justify-content: center;
 }
 
-
-.dropdown-toggle{
+.dropdown-toggle {
     color: #fff;
+}
+
+.dropdown-toggle:hover {
+    color: red;
 }
 
 /*Termina navbar*/
 
-.aside-container{
-  width: 100%;
-}
-
-.logo-mamamlon{
-    width: 100%;
-    
-}
-
-.banner-principal img{
-  width: 100%;
-}
-
-.tende{
-  margin-top: 10px;
-  color: white;
-  background-color: red;
-}
-
-.main-container{
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
-.footer{
-    background-color:#1f254a;
+.aside-container {
     width: 100%;
 }
 
+.logo-mamamlon {
+    width: 100%;
+}
 
-.logo-mamamlon img{
+.banner-principal img {
+    width: 100%;
+}
+
+.tende {
+    margin-top: 10px;
+    color: white;
+    background-color: red;
+}
+
+.main-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer {
+    background-color: #1f254a;
+    width: 100%;
+}
+
+.logo-mamamlon img {
     width: 100%;
     height: 500px;
 }
