--- a/resources/css/carrito.css
+++ b/resources/css/carrito.css
@@ -37,7 +37,6 @@
     width:100%;
     height: 100vh;
     display: flex;
-    justify-content: space-around;
     align-items: center;
 }
 
@@ -47,6 +46,45 @@
     width: 60%;
     border-radius: 10px;
     margin: 20px;
+    display: flex;
+}
+.item-container{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.itemo-container{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+}
+
+.imagen-container{
+
+    height: 45%;
+    width: 30%;
+    display: flex;
+    align-items: center;
+    
+}
+.imagen-container img{
+    height: 90%;
+    width: 90%;
+    border-radius: 20px;
+    margin: 20px;
+}
+
+.text-container{
+
+    height: 45%;
+    width: 35%;
+    display: flex;
+}
+
+.precio{
+    height: 45%;
+    width: 35%;
 }
 
 .resumen-container{
