--- a/resources/css/inicio.css
+++ b/resources/css/inicio.css
@@ -182,3 +182,25 @@ body {
     width: 100%;
     height: 500px;
 }
+
+.nose{
+    display: fixed  ;
+    background:transparent;
+    text-align: center;
+    border-radius: 20px;
+}
+
+.boton-user{
+    font-size: 30px;
+}
+
+.espacio{
+    color: white;
+}
+
+.letras{
+    text-decoration: none;
+    border-radius: 20px;
+    color: white;
+}
+
