--- a/resources/css/inicio.css
+++ b/resources/css/inicio.css
@@ -8,9 +8,25 @@
 }
 
 body {
-    background-color: #03080d;
+
+    background-color:rgb(61, 61, 61) ;
+   
+    
 }
 
+.header-container{
+    background-color: rgb(29, 29, 29);
+    
+}
+
+.footer{
+    background-color: rgb(34, 34, 34);
+}
+.bg-dark{
+   
+    width: 100%;
+  }
+  
 .header-container {
     height: 15vh;
     width: 100%;
@@ -131,7 +147,7 @@ body {
 
 /*Navbar*/
 .menu {
-    background-color: #000421;
+    background-color: #363636;
     color: white;
     width: 100%;
     height: 10vh;
@@ -173,34 +189,48 @@ body {
     justify-content: space-between;
 }
 
-.footer {
-    background-color: #1f254a;
-    width: 100%;
-}
+
 
 .logo-mamamlon img {
     width: 100%;
     height: 500px;
 }
 
-.nose{
-    display: fixed  ;
-    background:transparent;
-    text-align: center;
-    border-radius: 20px;
+
+#myCarousel {
+    max-width: 900px; 
+    
+    margin: auto;
+  }
+
+  .carousel-inner {
+    max-height: 1000px; 
+  }
+
+  .carousel-caption {
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 10px;
+    background: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    text-align: right;
+  }
+
+  .imagen-producto {
+    width: 100%; /* Puedes ajustar el porcentaje según tus necesidades */
+    height: 330px;; /* Mantiene la proporción original de la imagen */
 }
 
-.boton-user{
-    font-size: 30px;
-}
 
-.espacio{
-    color: white;
-}
 
-.letras{
-    text-decoration: none;
-    border-radius: 20px;
-    color: white;
-}
 
+
+/****************************************************************************************/
+
+#product-cards-container{
+    display:flex;
+    justify-content: space-evenly;
+  }
+
+/****************************************************************************************/
